--- a/app/globals.css
+++ b/app/globals.css
@@ -67,13 +67,18 @@
       transform: translateZ(0) rotate(360deg);
     }
   }
-  --animate-ripple: ripple var(--duration,2s) ease calc(var(--i, 0)*.2s) infinite
-;
+  --animate-ripple: ripple var(--duration, 2s) ease calc(var(--i, 0) * 0.2s)
+    infinite;
   @keyframes ripple {
-  0%, 100% {
-    transform: translate(-50%, -50%) scale(1);}
-  50% {
-    transform: translate(-50%, -50%) scale(0.9);}}}
+    0%,
+    100% {
+      transform: translate(-50%, -50%) scale(1);
+    }
+    50% {
+      transform: translate(-50%, -50%) scale(0.9);
+    }
+  }
+}
 
 :root {
   --radius: 0.625rem;
@@ -173,5 +178,9 @@
   }
   .cyan-gradient {
     @apply font-bold text-xl bg-gradient-to-r  from-[#3B82F6] to-[#2563EB] bg-clip-text text-transparent;
+  }
+
+  .subtitle-gradient {
+    @apply text-4xl sm:text-6xl font-bold mb-6  bg-gradient-to-r from-white to-gray-400 bg-clip-text text-transparent;
   }
 }
